# University

./: .gitattributes  .gitignore  README.md
AN/: README.md
AN/L04/: p3.c
AN/Project/: dane.txt  konkurs1.py  nifs3.py
AN/konkurs/: dane.txt  konkurs1.py  nifs3.py
AiSD/Tasks/: L0.docx  L1.docx  L2.docx  L3.docx  L4.docx  L6.docx
AiSD/Workshop/: p0.c  p1.c  p2.c  p3.c
BD/: L1.docx  L2.docx  L4.docx  L5.docx
DL/: README.md  tree_alg.ipynb
Frontend/: README.md
Frontend/L1/: blog.html
Frontend/L2/: challenges.html  style.css
Frontend/L3/: style.css
Frontend/L4/: form.html  forms.html  style.css
Frontend/L5/: shop.js
Frontend/L6/: w1.js  w2.js  w3.js  w4.js  w5.js  w6.js  w7.js
Frontend/L7/: script.js  styles.css
Frontend/L8/: pokedex.html  script.js
Frontend/L9/: game.js  game.ts  tsconfig.json
IO/: Faza_konstrukcji_EuroTravel.pptx  Koncepcja_wykonania_EuroTravel.docx  README.md  Specyfikacja_wymagan_EuroTravel.docx  Tablica_koncepcyjna_EuroTravel.pptx
Java/L01/: BirthYear.java
Java/L02/: Test.java
Java/L03/: WyrArytm.java  WyrazeniaTest.java
Java/L04/: ArraySetVar.java  AssocColl.java  AssociativeCollection.java  Pair.java  Test.java  (+2 more)
LDL/: README.md
MIA/: README.md
ML/: README.md
NN/: Assignment1.ipynb  Assignment2.ipynb  README.md
PiZZO/: README.md
PythonAdv/: README.md
PythonAdv/List14/src/: pyproject.toml
PythonAdv/List14/src/my_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PythonAdv/List14/src/pydemo.egg-info/: PKG-INFO  SOURCES.txt
SI/: README.md
SK/: README.md
Unity/: .gitignore
WEPPO/: README.md
(+473 files in other folders)
